src/test/ui/error-codes/E0277.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/E0277.rs:13:6
   |
LL | fn f(p: Path) { }
   |      ^ borrow the `Path` instead
   |
   = help: within `std::path::Path`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `std::path::Path`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error[E0277]: the trait bound `i32: Foo` is not satisfied
  --> $DIR/E0277.rs:17:5
   |
LL |     some_func(5i32);
   |     ^^^^^^^^^ the trait `Foo` is not implemented for `i32`
   |
note: required by `some_func`
  --> $DIR/E0277.rs:9:1
   |
LL | fn some_func<T: Foo>(foo: T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
